Fix: make ul flex container and add 16px gap

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -2,9 +2,12 @@
 you'll learn about it later. */
 @import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');
 
-body {
-  margin: 0;
+* {
   padding: 0;
+  margin: 0;
+}
+
+body {
   background: #eee;
   font-family: Besley, serif;
 }
@@ -19,17 +22,9 @@ body {
   align-items: center;
 }
 
-.left-links {
-  display: flex;
-
-}
-
-.links {
-  display: flex;
-  gap: 16px;
-}
-
+.left-links,
 .right-links {
+  align-items: center;
   display: flex;
   gap: 16px;
 }
@@ -66,5 +61,7 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 16px;
 }
 
